[project]
name = "Matrix_Multiplication_Darrowry"
version = "0.0.1"
authors = [
  { name="Ryan Darrow", email="darrowry@bu.edu" },
]
description = "A example package with Matrix Multiplication file and testing for it"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/EC530/ci-cd-darrowball13"
Issues = "https://github.com/EC530/ci-cd-darrowball13/issues"